# c_data_structures

./: CMakeLists.txt  LICENSE  README.md
contiguous_array/: CMakeLists.txt
contiguous_array/private/: array.c  array_variadic.c
contiguous_array/public/: array.h  array_type.h  array_variadic.h
contiguous_array/tests/: CMakeLists.txt  array_at.c  char_array.c  clear_array.c  copy_byte_array.c  copy_create_destroy_byte_array.c  copy_create_destroy_int_array.c  copy_create_destroy_int_array_range.c  copy_int_array.c  create_destroy_byte_array.c  create_destroy_int_array.c  double_array.c  float_array.c  get_array_element.c  int16_t_array.c  int32_t_array.c  int64_t_array.c  int8_t_array.c  int_array.c  intmax_t_array.c  is_array_empty.c  long_double_array.c  reserve_array.c  resize_byte_array.c  resize_byte_array_s.c  resize_int_array.c  resize_int_array_s.c  shrink_to_fit_array.c  signed_char_array.c  uint16_t_array.c  uint32_t_array.c  uint64_t_array.c  uint8_t_array.c  uintmax_t_array.c  unsigned_char_array.c
contiguous_array/tests/private/: rand.c
contiguous_array/tests/public/: rand.h
doubly_linked_list/: CMakeLists.txt
doubly_linked_list/private/: doubly_linked_list.c
doubly_linked_list/public/: doubly_linked_list.h  doubly_linked_list_type.h
doubly_linked_list/tests/: change_doubly_linked_list_node_data_type.c  copy_create_destroy_doubly_linked_list_node.c  copy_doubly_linked_list_node.c  create_destroy_doubly_linked_list_node.c  destroy_doubly_linked_list_node.c  doubly_linked_list_push_back.c  doubly_linked_list_remove_if.c  erase_following_doubly_linked_list_nodes.c  erase_preceding_doubly_linked_list_nodes.c  invert_doubly_linked_list.c  push_doubly_linked_list_node.c
linked_list/: CMakeLists.txt
linked_list/private/: doubly_linked_list.c  linked_list.c  list.c  singly_linked_list.c
linked_list/public/: doubly_linked_list.h  doubly_linked_list_type.h  linked_list.h  list.h  list_type.h  singly_linked_list.h  singly_linked_list_type.h
linked_list/tests/: append_doubly_linked_list_with_range.c  change_doubly_linked_list_node_data_type.c  change_singly_linked_list_node_data_type.c  copy_create_destroy_doubly_linked_list.c  copy_create_destroy_doubly_linked_list_node.c  copy_create_destroy_list.c  copy_create_destroy_singly_linked_list.c  copy_create_destroy_singly_linked_list_node.c  copy_doubly_linked_list_node.c  copy_singly_linked_list_node.c  create_destroy_doubly_linked_list.c  create_destroy_doubly_linked_list_node.c  create_destroy_doubly_linked_list_with_mutex_type.c  create_destroy_list.c  create_destroy_list_node.c  create_destroy_list_with_hint.c  create_destroy_singly_linked_list.c  create_destroy_singly_linked_list_node.c  create_destroy_singly_linked_list_with_mutex_type.c  destroy_doubly_linked_list_node.c  destroy_list_node.c  destroy_singly_linked_list_node.c  doubly_linked_list_destroy_back.c  doubly_linked_list_pop_back.c  doubly_linked_list_push_back.c  empty_doubly_linked_list.c  empty_singly_linked_list.c  erase_following_doubly_linked_list_nodes.c  erase_following_list_nodes.c  erase_following_singly_linked_list_nodes.c  erase_preceding_doubly_linked_list_nodes.c  erase_preceding_singly_linked_list_nodes.c  invert_doubly_linked_list.c  invert_singly_linked_list.c  pop_doubly_linked_list_node.c  pop_doubly_linked_list_range.c  pop_next_node.c  pop_next_singly_linked_list_node.c  pop_singly_linked_list_beginning.c  pop_singly_linked_list_range.c  (+23 more)
singly_linked_list/: CMakeLists.txt
singly_linked_list/private/: linked_list.c  singly_linked_list.c
singly_linked_list/public/: linked_list.h  singly_linked_list.h  singly_linked_list_type.h
singly_linked_list/tests/: copy_create_destroy_singly_linked_list.c  copy_create_destroy_singly_linked_list_node.c  copy_singly_linked_list_node.c  create_destroy_singly_linked_list.c  create_destroy_singly_linked_list_node.c  create_destroy_singly_linked_list_with_hint.c  create_destroy_singly_linked_list_with_mutex_type.c  destroy_singly_linked_list_node.c  empty_singly_linked_list.c  erase_following_singly_linked_list_nodes.c  erase_preceding_singly_linked_list_nodes.c  invert_singly_linked_list.c  pop_next_singly_linked_list_node.c  push_next_singly_linked_list_node.c  reverse_singly_linked_list.c  swap_free_and_next_singly_linked_list_nodes.c  swap_next_singly_linked_list_nodes.c  swap_singly_linked_list_nodes.c  swap_singly_linked_list_nodes_pf.c  swap_singly_linked_list_nodes_pp.c
utilities/: CMakeLists.txt
utilities/private/: alloc.c  mutex.c  status.c  utilities.c
utilities/public/: alloc.h  mutex.h  status.h  utilities.h
