add_library(array STATIC private/array.c private/array_variadic.c)
target_include_directories(array PUBLIC public)
set(DEBUG_BUILDS Debug RelWithDebInfo)
if(MSVC AND CMAKE_BUILD_TYPE IN_LIST DEBUG_BUILDS)
    target_compile_options(array PUBLIC 
        /fsanitize=address 
        /fsanitize=fuzzer
    )
endif()
target_link_libraries(array PRIVATE utilities)

add_subdirectory(tests)

add_executable(copy_create_destroy_int_array 
    tests/copy_create_destroy_int_array.c
)
target_link_libraries(copy_create_destroy_int_array PRIVATE array array_tests)
add_test(
    NAME copy_create_destroy_int_array
    COMMAND copy_create_destroy_int_array.exe
)
add_executable(copy_int_array tests/copy_int_array.c)
target_link_libraries(copy_int_array PRIVATE array array_tests)
add_test(NAME copy_int_array COMMAND copy_int_array.exe)
add_executable(create_destroy_int_array tests/create_destroy_int_array.c)
target_link_libraries(create_destroy_int_array PRIVATE array array_tests)
add_test(NAME create_destroy_int_array COMMAND create_destroy_int_array.exe)
add_executable(resize_int_array tests/resize_int_array.c)
target_link_libraries(resize_int_array PRIVATE array array_tests)
add_test(NAME resize_int_array COMMAND resize_int_array.exe)
add_executable(double_array tests/double_array.c)
target_link_libraries(double_array PRIVATE array)
add_test(NAME double_array COMMAND double_array.exe)
add_executable(float_array tests/float_array.c)
target_link_libraries(float_array PRIVATE array)
add_test(NAME float_array COMMAND float_array.exe)
add_executable(int_array tests/int_array.c)
target_link_libraries(int_array PRIVATE array)
add_test(NAME int_array COMMAND int_array.exe)
add_executable(int8_t_array tests/int8_t_array.c)
target_link_libraries(int8_t_array PRIVATE array)
add_test(NAME int8_t_array COMMAND int8_t_array.exe)
add_executable(int16_t_array tests/int16_t_array.c)
target_link_libraries(int16_t_array PRIVATE array)
add_test(NAME int16_t_array COMMAND int16_t_array.exe)
add_executable(int32_t_array tests/int32_t_array.c)
target_link_libraries(int32_t_array PRIVATE array)
add_test(NAME int32_t_array COMMAND int32_t_array.exe)
add_executable(int64_t_array tests/int64_t_array.c)
target_link_libraries(int64_t_array PRIVATE array)
add_test(NAME int64_t_array COMMAND int64_t_array.exe)
add_executable(intmax_t_array tests/intmax_t_array.c)
target_link_libraries(intmax_t_array PRIVATE array)
add_test(NAME intmax_t_array COMMAND intmax_t_array.exe)
add_executable(long_double_array tests/long_double_array.c)
target_link_libraries(long_double_array PRIVATE array)
add_test(NAME long_double_array COMMAND long_double_array.exe)
add_executable(signed_char_array tests/signed_char_array.c)
target_link_libraries(signed_char_array PRIVATE array)
add_test(NAME signed_char_array COMMAND signed_char_array.exe)
add_executable(uint8_t_array tests/uint8_t_array.c)
target_link_libraries(uint8_t_array PRIVATE array)
add_test(NAME uint8_t_array COMMAND uint8_t_array.exe)
add_executable(uint16_t_array tests/uint16_t_array.c)
target_link_libraries(uint16_t_array PRIVATE array)
add_test(NAME uint16_t_array COMMAND uint16_t_array.exe)
add_executable(uint32_t_array tests/uint32_t_array.c)
target_link_libraries(uint32_t_array PRIVATE array)
add_test(NAME uint32_t_array COMMAND uint32_t_array.exe)
add_executable(uint64_t_array tests/uint64_t_array.c)
target_link_libraries(uint64_t_array PRIVATE array)
add_test(NAME uint64_t_array COMMAND uint64_t_array.exe)
add_executable(uintmax_t_array tests/uintmax_t_array.c)
target_link_libraries(uintmax_t_array PRIVATE array)
add_test(NAME uintmax_t_array COMMAND uintmax_t_array.exe)
add_executable(unsigned_char_array tests/unsigned_char_array.c)
target_link_libraries(unsigned_char_array PRIVATE array)
add_test(NAME unsigned_char_array COMMAND unsigned_char_array.exe)